added Siema carousel with a few basic options to setup

--- a/index.html
+++ b/index.html
@@ -49,76 +49,61 @@
   </section>
 
   <section class="content content__projects" id="about">
-    <!-- <svg class="angled-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-      <polygon points="0,0 100,0 0,100" />
-    </svg> -->
-
     <h1>WHY SHOULD YOU HIRE ME?</h1>
     
   </section>
  
 
   <section id="projects" class="content content__projects">
-    <!-- <svg class="angled-svg angled-svg--charcoal" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"
-      preserveAspectRatio="none">
-      <polygon points="0,0 100,0 0,100" />
-    </svg> -->
-
     <h1>PROJECTS</h1>
-    <h2 id="auslanInterpreter" class="projects" data-target="auslanInterpreterContent">Auslan Interpreter</h2>
-    <h2 id="usernameChecker" class="projects" data-target="usernameCheckerContent">Username Checker</h2>
-    <h2 id="fraga" class="projects" data-target="fragaContent">Fraga</h2>
-    <div id="auslanInterpreterContent" class="text">
-      <h2>Virtual Auslan Interpreter</h2>
-      <h2>JavaScript/Leap Motion</h2>
-      <p>The Auslan Interpreter is designed to help those who are unable to understand Australian Sign Language, communicate
-        with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to
-        interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed
-        and displays, as well as speaks the recognised letter.</p>
+    <div class="siema">
+      <div id="auslanInterpreterContent">
+        <h2>Virtual Auslan Interpreter</h2>
+        <h2>JavaScript/Leap Motion</h2>
+        <p>The Auslan Interpreter is designed to help those who are unable to understand Australian Sign Language, communicate
+          with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to
+          interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed
+          and displays, as well as speaks the recognised letter.</p>
+        <div class="button">
+          <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Auslan-Interpreter" target="_blank"
+            alt="Auslan Interpreter github link">Code</a>
+          <!-- <figure class="photo-container">
+                  <iframe id="iframe" src="https://www.youtube.com/embed/Swy6URGIUbA" frameborder="0" allow="autoplay; encrypted-media"
+                    allowfullscreen></iframe>
+                </figure> -->
+        </div>
       </div>
-      <div class="button">
-        <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Auslan-Interpreter" target="_blank"
-          alt="Auslan Interpreter github link">Code</a>
-      </div>
-      <!-- <figure class="photo-container">
-        <iframe id="iframe" src="https://www.youtube.com/embed/Swy6URGIUbA" frameborder="0" allow="autoplay; encrypted-media"
-          allowfullscreen></iframe>
-      </figure> -->
-    </div>
 
-    <div id="usernameCheckerContent" class="text noscale">
-      <h2 class="projects-description">Username Checker</h2>
-      <h2>React/Webpack</h2>
-      <p></p>
-      <div class="button">
-        <a class="button__link" href="https://aparkinbotswana.github.io/username-checker/" target="_blank" alt="Username Checker demo link">Demo</a>
-        <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/username-checker" target="_blank" alt="Username Checker github link">Code</a>
+      <div id="usernameCheckerContent">
+        <h2 class="projects-description">Username Checker</h2>
+        <h2>React/Webpack</h2>
+        <p></p>
+        <div class="button">
+          <a class="button__link" href="https://aparkinbotswana.github.io/username-checker/" target="_blank" alt="Username Checker demo link">Demo</a>
+          <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/username-checker" target="_blank" alt="Username Checker github link">Code</a>
+        </div>
+        <figure class="photo-container">
+          <img class="photo__img" src="" alt="Username Checker image">
+        </figure>
       </div>
-      <figure class="photo-container">
-        <img class="photo__img" src="" alt="Username Checker image">
-      </figure>
-    </div>
 
-    <div id="fragaContent" class="text">
-      <h2 class="projects-description">Fråga</h2>
-      <h2>JavaScript/Ruby on Rails</h2>
-      <p class="content--font18">Social app with a focus on geolocation. Users can post any question they like relevant to a
-        particular location. Other users within the vicinity can see and respond to the question.</p>
-      <div class="button">
-        <a class="button__link" href="https://fraga-app.herokuapp.com/" target="_blank" alt="fraga demo link">Demo</a>
-        <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Fraga" target="_blank" alt="fraga github link">Code</a>
+      <div id="fragaContent" >
+        <h2 class="projects-description">Fråga</h2>
+        <h2>JavaScript/Ruby on Rails</h2>
+        <p class="content--font18">Social app with a focus on geolocation. Users can post any question they like relevant to a
+          particular location. Other users within the vicinity can see and respond to the question.</p>
+        <div class="button">
+          <a class="button__link" href="https://fraga-app.herokuapp.com/" target="_blank" alt="fraga demo link">Demo</a>
+          <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Fraga" target="_blank" alt="fraga github link">Code</a>
+        </div>
+        <figure class="photo-container">
+          <img class="photo__img" src="build/images/Fraga.png" alt="Fraga project image">
+        </figure>
       </div>
-      <figure class="photo-container">
-        <img class="photo__img" src="build/images/Fraga.png" alt="Fraga project image">
-      </figure>
     </div>
   </section>
 
   <footer class="content" id="contact">
-    <!-- <svg class="angled-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-      <polygon points="0,0 100,0 0,100" />
-    </svg>
- -->
     <div class="content__contact">
       <h1>CONTACT</h1>
       <div class="container">
