--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
       </div>
     </nav>
   </header >
-
   <div id="name" class="name-container">
     <p class="name-container__text five">JAMES THEO</p>
     <p class="name-container__text five name-container__text--sml">FRONTEND DEVELOPER</p>
   </div>
-  <section id="p5" class="content content__p5">
+
+  <section id="p5" class="content content__p5 content--position">
     <div id="canvas-container">
       <!-- canvas element created and appended here through p5.js library -->
     </div>
@@ -50,7 +50,7 @@
 
   <section class="content content__projects" id="about">
     <h1>WHY SHOULD YOU HIRE ME?</h1>
-    
+    <p></p>
   </section>
  
 
@@ -101,21 +101,23 @@
         </figure>
       </div>
     </div>
+    <div class="container">
+      <img class="container__flex1 container--align-right" id="prev" src="build/images/back.svg" alt="back">
+      <img class="container__flex1 container--align-left" id="next" src="build/images/next.svg" alt="next">
+    </div>
   </section>
 
-  <footer class="content" id="contact">
+  <footer class="content content__contact--viewport" id="contact">
     <div class="content__contact">
       <h1>CONTACT</h1>
-      <div class="container">
-        <figure class="container__flex1 container--align-right">
-          <a href="https://github.com/aparkinbotswana" target="_blank"><img class="contact-image" src="build/images/002-github.svg" alt="github link"></a>
-        </figure>
-        <figure class="container__flex1">
-          <a href="https://www.linkedin.com/in/james-theo/" target="_blank"><img class="contact-image" src="build/images/001-linkedin.svg" alt="linkedin link"></a>
-        </figure>
-        <figure class="container__flex1 container--align-left">
-          <a href="mailto:theojames1989@gmail.com"><img class="contact-image" src="build/images/003-mail.svg" alt="email address"></a>
-        </figure>
+      <div>
+        <a href="https://github.com/aparkinbotswana" target="_blank">https://github.com/aparkinbotswana</a>
+      </div>
+      <div>
+        <a href="https://www.linkedin.com/in/james-theo/" target="_blank">https://www.linkedin.com/in/james-theo/</a>
+      </div>     
+      <div>
+        <a href="mailto:theojames1989@gmail.com">theojames1989@gmail.com</a>
       </div>
     </div>
   </footer>
