fixed some html. made iframe responsive

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 
   <section class="content content__projects" id="about">
     <h1>WHY SHOULD YOU HIRE ME?</h1>
-    <p></p>
+    <!-- <p>I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical
+    thinking and creativity in my work. After being introduced to the world of coding by close friends, I realised the
+    potential it offered for me to be creative and build programs that would give me a rewarding sense of fulfilment.</p> -->
   </section>
  
 
@@ -67,10 +69,10 @@
         <div class="button">
           <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Auslan-Interpreter" target="_blank"
             alt="Auslan Interpreter github link">Code</a>
-          <!-- <figure class="photo-container">
-                  <iframe id="iframe" src="https://www.youtube.com/embed/Swy6URGIUbA" frameborder="0" allow="autoplay; encrypted-media"
-                    allowfullscreen></iframe>
-                </figure> -->
+          <figure class="iframe-container">
+            <iframe class="iframe-container__responsive" id="iframe" src="https://www.youtube.com/embed/Swy6URGIUbA" frameborder="0" allow="autoplay; encrypted-media"
+              allowfullscreen></iframe>
+          </figure>
         </div>
       </div>
 
@@ -83,27 +85,27 @@
           <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/username-checker" target="_blank" alt="Username Checker github link">Code</a>
         </div>
         <figure class="photo-container">
-          <img class="photo__img" src="" alt="Username Checker image">
+          <img class="photo-container__img" src="" alt="Username Checker image">
         </figure>
       </div>
 
       <div id="fragaContent" >
         <h2 class="projects-description">Fråga</h2>
         <h2>JavaScript/Ruby on Rails</h2>
-        <p class="content--font18">Social app with a focus on geolocation. Users can post any question they like relevant to a
+        <p>Social app with a focus on geolocation. Users can post any question they like relevant to a
           particular location. Other users within the vicinity can see and respond to the question.</p>
         <div class="button">
           <a class="button__link" href="https://fraga-app.herokuapp.com/" target="_blank" alt="fraga demo link">Demo</a>
           <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Fraga" target="_blank" alt="fraga github link">Code</a>
         </div>
         <figure class="photo-container">
-          <img class="photo__img" src="build/images/Fraga.png" alt="Fraga project image">
+          <img class="photo-container__img" src="build/images/Fraga.png" alt="Fraga project image">
         </figure>
       </div>
     </div>
     <div class="container">
-      <img class="container__flex1 container--align-right" id="prev" src="build/images/back.svg" alt="back">
-      <img class="container__flex1 container--align-left" id="next" src="build/images/next.svg" alt="next">
+      <img class="container__flex1 container--align-right siema-arrow" id="prev" src="build/images/back.svg" alt="back">
+      <img class="container__flex1 container--align-left siema-arrow" id="next" src="build/images/next.svg" alt="next">
     </div>
   </section>
 
@@ -111,13 +113,13 @@
     <div class="content__contact">
       <h1>CONTACT</h1>
       <div>
-        <a href="https://github.com/aparkinbotswana" target="_blank">https://github.com/aparkinbotswana</a>
+        <a class="contact-link" href="https://github.com/aparkinbotswana" target="_blank">https://github.com/aparkinbotswana</a>
       </div>
       <div>
-        <a href="https://www.linkedin.com/in/james-theo/" target="_blank">https://www.linkedin.com/in/james-theo/</a>
+        <a class="contact-link" href="https://www.linkedin.com/in/james-theo/" target="_blank">https://www.linkedin.com/in/james-theo/</a>
       </div>     
       <div>
-        <a href="mailto:theojames1989@gmail.com">theojames1989@gmail.com</a>
+        <a class="contact-link" href="mailto:theojames1989@gmail.com">theojames1989@gmail.com</a>
       </div>
     </div>
   </footer>
