made small change to html structure

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         <div class="button">
           <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Auslan-Interpreter" target="_blank"
             alt="Auslan Interpreter github link">Code</a>
-          <figure class="iframe-container">
-            <iframe class="iframe-container__responsive" id="iframe" src="https://www.youtube.com/embed/Swy6URGIUbA" frameborder="0" allow="autoplay; encrypted-media"
+          <figure class="figure-container">
+            <iframe class="figure-container__responsive" id="iframe" src="https://www.youtube.com/embed/Swy6URGIUbA" frameborder="0" allow="autoplay; encrypted-media"
               allowfullscreen></iframe>
           </figure>
         </div>
@@ -84,8 +84,8 @@
           <a class="button__link" href="https://aparkinbotswana.github.io/username-checker/" target="_blank" alt="Username Checker demo link">Demo</a>
           <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/username-checker" target="_blank" alt="Username Checker github link">Code</a>
         </div>
-        <figure class="photo-container">
-          <img class="photo-container__img" src="" alt="Username Checker image">
+        <figure class="figure-container">
+          <img class="figure-container__responsive" src="" alt="Username Checker image">
         </figure>
       </div>
 
@@ -98,8 +98,8 @@
           <a class="button__link" href="https://fraga-app.herokuapp.com/" target="_blank" alt="fraga demo link">Demo</a>
           <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Fraga" target="_blank" alt="fraga github link">Code</a>
         </div>
-        <figure class="photo-container">
-          <img class="photo-container__img" src="build/images/Fraga.png" alt="Fraga project image">
+        <figure class="figure-container">
+          <img class="figure-container__responsive" src="build/images/Fraga.png" alt="Fraga project image">
         </figure>
       </div>
     </div>
