fixed positioning of images and buttons. Working on nav for mobile

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>James Theo: Web Developer</title>
 </head>
 <body>
-  <header>
+  <header class="container">
     <div class="navbar-icon-container">
       <a href="#" class="navbar-icon__button [ js-navbar-button ]">
         <svg class="navbar-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
@@ -48,7 +48,7 @@
     </div>
   </section>
 
-  <section class="content content__projects" id="about">
+  <section class="content content__about" id="about">
     <h1>WHY SHOULD YOU HIRE ME?</h1>
     <!-- <p>I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical
     thinking and creativity in my work. After being introduced to the world of coding by close friends, I realised the
@@ -66,23 +66,23 @@
           with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to
           interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed
           and displays, as well as speaks the recognised letter.</p>
-        <div class="button">
-          <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Auslan-Interpreter" target="_blank"
+        <div class="button-container">
+          <a class="button-container__link button-container__link--ghost" href="https://github.com/aparkinbotswana/Auslan-Interpreter" target="_blank"
             alt="Auslan Interpreter github link">Code</a>
-          <figure class="figure-container">
-            <iframe class="figure-container__responsive" id="iframe" src="https://www.youtube.com/embed/Swy6URGIUbA" frameborder="0" allow="autoplay; encrypted-media"
-              allowfullscreen></iframe>
-          </figure>
         </div>
+        <figure class="figure-container">
+          <iframe class="figure-container__responsive" id="iframe" src="https://www.youtube.com/embed/Swy6URGIUbA" frameborder="0" allow="autoplay; encrypted-media"
+            allowfullscreen></iframe>
+        </figure>
       </div>
 
       <div id="usernameCheckerContent">
         <h2 class="projects-description">Username Checker</h2>
         <h2>React/Webpack</h2>
         <p></p>
-        <div class="button">
-          <a class="button__link" href="https://aparkinbotswana.github.io/username-checker/" target="_blank" alt="Username Checker demo link">Demo</a>
-          <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/username-checker" target="_blank" alt="Username Checker github link">Code</a>
+        <div class="button-container">
+          <a class="button-container__link" href="https://aparkinbotswana.github.io/username-checker/" target="_blank" alt="Username Checker demo link">Demo</a>
+          <a class="button-container__link button-container__link--ghost" href="https://github.com/aparkinbotswana/username-checker" target="_blank" alt="Username Checker github link">Code</a>
         </div>
         <figure class="figure-container">
           <img class="figure-container__responsive" src="" alt="Username Checker image">
@@ -94,9 +94,9 @@
         <h2>JavaScript/Ruby on Rails</h2>
         <p>Social app with a focus on geolocation. Users can post any question they like relevant to a
           particular location. Other users within the vicinity can see and respond to the question.</p>
-        <div class="button">
-          <a class="button__link" href="https://fraga-app.herokuapp.com/" target="_blank" alt="fraga demo link">Demo</a>
-          <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Fraga" target="_blank" alt="fraga github link">Code</a>
+        <div class="button-container">
+          <a class="button-container__link" href="https://fraga-app.herokuapp.com/" target="_blank" alt="fraga demo link">Demo</a>
+          <a class="button-container__link button-container__link--ghost" href="https://github.com/aparkinbotswana/Fraga" target="_blank" alt="fraga github link">Code</a>
         </div>
         <figure class="figure-container">
           <img class="figure-container__responsive" src="build/images/Fraga.png" alt="Fraga project image">
@@ -109,8 +109,8 @@
     </div>
   </section>
 
-  <footer class="content content__contact--viewport" id="contact">
-    <div class="content__contact">
+  <footer class="content content__contact" id="contact">
+    <div class="contact-container">
       <h1>CONTACT</h1>
       <div>
         <a class="contact-link" href="https://github.com/aparkinbotswana" target="_blank">https://github.com/aparkinbotswana</a>
