fixed positioning of navbar for mobile and desktop

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>James Theo: Web Developer</title>
 </head>
 <body>
-  <header class="container">
+  <header>
     <div class="navbar-icon-container">
       <a href="#" class="navbar-icon__button [ js-navbar-button ]">
         <svg class="navbar-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
@@ -24,14 +24,14 @@
       </a>
     </div>
     <nav id="navbar" class="navbar-container navbar-container--transition">
-      <div class="container">
-        <div class="container__flex1 container--align-right">
+      <div class="container navbar-container__width">
+        <div class="container__flex1 navbar__about">
           <a href="#about" class="navbar-container__button"><p>ABOUT</p></a>
         </div>
         <div class="container__flex1">
           <a href="#projects" class="navbar-container__button"><p>PROJECTS</p></a>
         </div>
-        <div class="container__flex1 container--align-left">
+        <div class="container__flex1 navbar__contact">
           <a href="#contact" class="navbar-container__button"><p>CONTACT</p></a>
         </div>
       </div>
