fixed buttons and centered contact section

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     </nav>
   </header >
   <div id="name" class="name-container">
-    <p class="name-container__text five">JAMES THEO</p>
-    <p class="name-container__text five name-container__text--sml">FRONTEND DEVELOPER</p>
+    <h1 class="name-container__text">JAMES THEO</h1>
+    <p class="name-container__text name-container__text--sml">FRONTEND DEVELOPER</p>
   </div>
 
   <section id="p5" class="content content__p5 content--position">
@@ -50,57 +50,57 @@
 
   <section class="content content__about" id="about">
     <h1>WHY SHOULD YOU HIRE ME?</h1>
-    <!-- <p>I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical
+    <p>I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical
     thinking and creativity in my work. After being introduced to the world of coding by close friends, I realised the
-    potential it offered for me to be creative and build programs that would give me a rewarding sense of fulfilment.</p> -->
+    potential it offered for me to be creative and build programs that would give me a rewarding sense of fulfilment.</p>
   </section>
  
-
   <section id="projects" class="content content__projects">
     <h1>PROJECTS</h1>
     <div class="siema">
       <div id="auslanInterpreterContent">
         <h2>Virtual Auslan Interpreter</h2>
-        <h2>JavaScript/Leap Motion</h2>
+        <h3>JavaScript/Leap Motion</h3>
         <p>The Auslan Interpreter is designed to help those who are unable to understand Australian Sign Language, communicate
           with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to
           interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed
           and displays, as well as speaks the recognised letter.</p>
-        <div class="button-container">
-          <a class="button-container__link button-container__link--ghost" href="https://github.com/aparkinbotswana/Auslan-Interpreter" target="_blank"
-            alt="Auslan Interpreter github link">Code</a>
-        </div>
         <figure class="figure-container">
           <iframe class="figure-container__responsive" id="iframe" src="https://www.youtube.com/embed/Swy6URGIUbA" frameborder="0" allow="autoplay; encrypted-media"
             allowfullscreen></iframe>
         </figure>
+        <div class="button-container">
+          <a class="button-container__link button-container__link--ghost" href="https://github.com/aparkinbotswana/Auslan-Interpreter"
+            target="_blank" alt="Auslan Interpreter github link">Code</a>
+        </div>
       </div>
 
       <div id="usernameCheckerContent">
         <h2 class="projects-description">Username Checker</h2>
-        <h2>React/Webpack</h2>
-        <p></p>
+        <h3>React/Webpack</h3>
+        <p>Social app with a focus on geolocation. Users can post any question they like relevant to a particular location. Other users within the vicinity can see and respond to the question.</p>
+        <figure class="figure-container">
+          <img class="figure-container__responsive" src="" alt="Username Checker image">
+        </figure>
         <div class="button-container">
           <a class="button-container__link" href="https://aparkinbotswana.github.io/username-checker/" target="_blank" alt="Username Checker demo link">Demo</a>
           <a class="button-container__link button-container__link--ghost" href="https://github.com/aparkinbotswana/username-checker" target="_blank" alt="Username Checker github link">Code</a>
         </div>
-        <figure class="figure-container">
-          <img class="figure-container__responsive" src="" alt="Username Checker image">
-        </figure>
       </div>
 
       <div id="fragaContent" >
         <h2 class="projects-description">Fråga</h2>
-        <h2>JavaScript/Ruby on Rails</h2>
+        <h3>JavaScript/Ruby on Rails</h3>
         <p>Social app with a focus on geolocation. Users can post any question they like relevant to a
           particular location. Other users within the vicinity can see and respond to the question.</p>
-        <div class="button-container">
-          <a class="button-container__link" href="https://fraga-app.herokuapp.com/" target="_blank" alt="fraga demo link">Demo</a>
-          <a class="button-container__link button-container__link--ghost" href="https://github.com/aparkinbotswana/Fraga" target="_blank" alt="fraga github link">Code</a>
-        </div>
         <figure class="figure-container">
           <img class="figure-container__responsive" src="build/images/Fraga.png" alt="Fraga project image">
         </figure>
+        <div class="button-container">
+          <a class="button-container__link" href="https://fraga-app.herokuapp.com/" target="_blank" alt="fraga demo link">Demo</a>
+          <a class="button-container__link button-container__link--ghost" href="https://github.com/aparkinbotswana/Fraga"
+            target="_blank" alt="fraga github link">Code</a>
+        </div>
       </div>
     </div>
     <div class="container">
@@ -109,8 +109,8 @@
     </div>
   </section>
 
-  <footer class="content content__contact" id="contact">
-    <div class="contact-container">
+  <footer class="content" id="contact">
+    <section class="content__contact">
       <h1>CONTACT</h1>
       <div>
         <a class="contact-link" href="https://github.com/aparkinbotswana" target="_blank">https://github.com/aparkinbotswana</a>
@@ -121,7 +121,7 @@
       <div>
         <a class="contact-link" href="mailto:theojames1989@gmail.com">theojames1989@gmail.com</a>
       </div>
-    </div>
+    </section>
   </footer>
 </body>
 </html>
