--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="build/stylesheets/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Dosis|Julius+Sans+One|Nanum+Gothic|Rubik|Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Fira+Sans:300" rel="stylesheet">
   <script src="build/js/bundle.js" charset="utf-8"></script>
   <title>James Theo: Web Developer</title>
 </head>
@@ -26,20 +26,20 @@
     <nav id="navbar" class="navbar-container navbar-container--transition">
       <div class="container navbar-container__width">
         <div class="container__flex1 navbar__about">
-          <a href="#about" class="navbar-container__button"><p>ABOUT</p></a>
+          <a href="#about"><p class="navbar-container__button">About</p></a>
         </div>
         <div class="container__flex1">
-          <a href="#projects" class="navbar-container__button"><p>PROJECTS</p></a>
+          <a href="#projects"><p class="navbar-container__button">Projects</p></a>
         </div>
         <div class="container__flex1 navbar__contact">
-          <a href="#contact" class="navbar-container__button"><p>CONTACT</p></a>
+          <a href="#contact"><p class="navbar-container__button">Contact</p></a>
         </div>
       </div>
     </nav>
   </header >
   <div id="name" class="name-container">
-    <h1 class="name-container__text">JAMES THEO</h1>
-    <p class="name-container__text name-container__text--sml">FRONTEND DEVELOPER</p>
+    <h1 class="name-container__text">James Theo</h1>
+    <p class="name-container__text name-container__text--sml">Front-end Developer</p>
   </div>
 
   <section id="p5" class="content content__p5 content--position">
@@ -49,33 +49,29 @@
   </section>
 
   <section class="content content__about" id="about">
-    <h1>WHY SHOULD YOU HIRE ME?</h1>
+    <h1>Why you should hire me?</h1>
     <p>I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical
     thinking and creativity in my work. After being introduced to the world of coding by close friends, I realised the
     potential it offered for me to be creative and build programs that would give me a rewarding sense of fulfilment.</p>
   </section>
  
   <section id="projects" class="content content__projects">
-    <h1>PROJECTS</h1>
+    <h1>Projects</h1>
     <div class="siema">
       <div id="auslanInterpreterContent">
-        <h2>Virtual Auslan Interpreter</h2>
-        <h3>JavaScript/Leap Motion</h3>
-        <p>The Auslan Interpreter is designed to help those who are unable to understand Australian Sign Language, communicate
-          with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to
-          interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed
-          and displays, as well as speaks the recognised letter.</p>
-        <figure class="figure-container">
+        <h2>Leapmotion Virtual Auslan Interpreter</h2>
+        <p>The Auslan Interpreter is a JavaScript app, designed to help those who are unable to understand Australian Sign Language, communicate with those who can. The app uses the Leap Motion to interpret hand gestures from the user. The program recognises the gesture and displays, as well as speaks the recognised letter.</p>
+        <!-- <figure class="figure-container">
           <iframe class="figure-container__responsive" id="iframe" src="https://www.youtube.com/embed/Swy6URGIUbA" frameborder="0" allow="autoplay; encrypted-media"
-            allowfullscreen></iframe>
-        </figure>
+              allowfullscreen></iframe>
+        </figure> -->
         <div class="button-container">
           <a class="button-container__link button-container__link--ghost" href="https://github.com/aparkinbotswana/Auslan-Interpreter"
             target="_blank" alt="Auslan Interpreter github link">Code</a>
         </div>
       </div>
 
-      <div id="usernameCheckerContent">
+      <!-- <div id="usernameCheckerContent">
         <h2 class="projects-description">Username Checker</h2>
         <h3>React/Webpack</h3>
         <p>Social app with a focus on geolocation. Users can post any question they like relevant to a particular location. Other users within the vicinity can see and respond to the question.</p>
@@ -86,13 +82,11 @@
           <a class="button-container__link" href="https://aparkinbotswana.github.io/username-checker/" target="_blank" alt="Username Checker demo link">Demo</a>
           <a class="button-container__link button-container__link--ghost" href="https://github.com/aparkinbotswana/username-checker" target="_blank" alt="Username Checker github link">Code</a>
         </div>
-      </div>
+      </div> -->
 
       <div id="fragaContent" >
         <h2 class="projects-description">Fråga</h2>
-        <h3>JavaScript/Ruby on Rails</h3>
-        <p>Social app with a focus on geolocation. Users can post any question they like relevant to a
-          particular location. Other users within the vicinity can see and respond to the question.</p>
+        <p>Social app with a focus on geolocation. Users can post any question they like relevant to a particular location. Other users within the vicinity can see and respond to the question. Created in JavaScript & Ruby on Rails</p>
         <figure class="figure-container">
           <img class="figure-container__responsive" src="build/images/Fraga.png" alt="Fraga project image">
         </figure>
@@ -103,22 +97,57 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <!-- <div class="container">
       <img class="container__flex1 container--align-right siema-arrow" id="prev" src="build/images/back.svg" alt="back">
       <img class="container__flex1 container--align-left siema-arrow" id="next" src="build/images/next.svg" alt="next">
-    </div>
+    </div> -->
+<div class='container'>
+  <ul>
+    <li id="prev">
+      <a class='animated-arrow'>
+        <span class='arrow -left'>
+          <span class='shaft'></span>
+        </span>
+        <span class='main'>
+          <span class='text'>
+            Previous
+          </span>
+          <span class='arrow -right'>
+            <span class='shaft'></span>
+          </span>
+        </span>
+      </a>
+    </li>
+    <li id="next">
+      <a class='animated-arrow'>
+        <span class='arrow -left'>
+          <span class='shaft'></span>
+        </span>
+        <span class='main'>
+          <span class='text'>
+            Next
+          </span>
+          <span class='arrow -right'>
+            <span class='shaft'></span>
+          </span>
+        </span>
+      </a>
+    </li>
+  </ul>
+</div>
   </section>
 
   <footer class="content" id="contact">
     <section class="content__contact">
-      <h1>CONTACT</h1>
-      <div>
-        <a class="contact-link" href="https://github.com/aparkinbotswana" target="_blank">https://github.com/aparkinbotswana</a>
+      <h1>Contact</h1>
+      <p>Feel free to reach out and get in touch!</p>
+      <div class="contact-container">
+<a class="contact-link" href="https://github.com/aparkinbotswana" target="_blank">github.com/aparkinbotswana</a>
       </div>
-      <div>
-        <a class="contact-link" href="https://www.linkedin.com/in/james-theo/" target="_blank">https://www.linkedin.com/in/james-theo/</a>
+<div class="contact-container">
+<a class="contact-link" href="https://www.linkedin.com/in/james-theo/" target="_blank">linkedin.com/in/james-theo</a>
       </div>     
-      <div>
+<div class="contact-container">
         <a class="contact-link" href="mailto:theojames1989@gmail.com">theojames1989@gmail.com</a>
       </div>
     </section>
