changed classnames on animated arrows. previous arrow now points correct way. Gonna reward myself with some Overwatch

--- a/index.html
+++ b/index.html
@@ -104,15 +104,15 @@
 <div class='container'>
   <ul>
     <li id="prev">
-      <a class='animated-arrow'>
-        <span class='arrow -left'>
+      <a class='animated-arrow animated-arrow--previous'>
+        <span class='arrow arrow__left'>
           <span class='shaft'></span>
         </span>
         <span class='main'>
           <span class='text'>
             Previous
           </span>
-          <span class='arrow -right'>
+          <span class='arrow arrow__right arrow__right--previous'>
             <span class='shaft'></span>
           </span>
         </span>
@@ -120,14 +120,14 @@
     </li>
     <li id="next">
       <a class='animated-arrow'>
-        <span class='arrow -left'>
+        <span class='arrow arrow__left'>
           <span class='shaft'></span>
         </span>
         <span class='main'>
           <span class='text'>
             Next
           </span>
-          <span class='arrow -right'>
+          <span class='arrow arrow__right'>
             <span class='shaft'></span>
           </span>
         </span>
