arrows now facing correct way. need to fix position and animation for "previous" still

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <ul>
     <li id="prev">
       <a class='animated-arrow animated-arrow--previous'>
-        <span class='arrow arrow__left'>
+        <span class='arrow arrow__left arrow__left--previous'>
           <span class='shaft'></span>
         </span>
         <span class='main'>
