fixed positioning of navigation buttons in container

--- a/index.html
+++ b/index.html
@@ -132,6 +132,22 @@
         </span>
       </a>
     </li>
+<!-- <li class="container__flex1 container--align-left" id="next">
+<a class='animated-arrow animated-arrow--previous'>
+    <span class='arrow arrow__left arrow__left--previous'>
+      <span class='shaft'></span>
+    </span>
+    <span class='main'>
+      <span class='text'>
+        Next
+      </span>
+      <span class='arrow arrow__right arrow'>
+        <span class='shaft'></span>
+      </span>
+    </span>
+  </a>
+</li> -->
+
   </ul>
   </section>
 
