almost have the stupid arrows sorted. Suspicion is that if I fix the div alignment between "animated-arrow" and "main", it should sort mostly everything else.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <h1>Projects</h1>
     <div class="siema">
       <div id="auslanInterpreterContent">
-        <h2>Leapmotion Virtual Auslan Interpreter</h2>
+        <h2>Leap Motion Virtual Auslan Interpreter</h2>
         <p>The Auslan Interpreter is a JavaScript app, designed to help those who are unable to understand Australian Sign Language, communicate with those who can. The app uses the Leap Motion to interpret hand gestures from the user. The program recognises the gesture and displays, as well as speaks the recognised letter.</p>
         <!-- <figure class="figure-container">
           <iframe class="figure-container__responsive" id="iframe" src="https://www.youtube.com/embed/Swy6URGIUbA" frameborder="0" allow="autoplay; encrypted-media"
@@ -101,20 +101,28 @@
       <img class="container__flex1 container--align-right siema-arrow" id="prev" src="build/images/back.svg" alt="back">
       <img class="container__flex1 container--align-left siema-arrow" id="next" src="build/images/next.svg" alt="next">
     </div> -->
+<!--  -->
   <ul class='container'>
-    <li class="container__flex1 container--align-right" id="back">
+    <li class="container__flex1" id="back">
       <a class='animated-arrow animated-arrow--previous'>
+<span class='main'>
+<span class='text'>
+  Back
+</span>
+
         <span class='arrow arrow__left arrow__left--previous'>
           <span class='shaft'></span>
         </span>
-        <span class='main'>
-          <span class='text'>
+        <!-- <span class='main'> -->
+          <!-- <span class='text'>
             Back
-          </span>
+          </span> -->
+</span>
+
           <span class='arrow arrow__right arrow__right--previous'>
             <span class='shaft'></span>
           </span>
-        </span>
+        <!-- </span> -->
       </a>
     </li>
     <li class="container__flex1 container--align-left" id="next">
@@ -132,21 +140,6 @@
         </span>
       </a>
     </li>
-<!-- <li class="container__flex1 container--align-left" id="next">
-<a class='animated-arrow animated-arrow--previous'>
-    <span class='arrow arrow__left arrow__left--previous'>
-      <span class='shaft'></span>
-    </span>
-    <span class='main'>
-      <span class='text'>
-        Next
-      </span>
-      <span class='arrow arrow__right arrow'>
-        <span class='shaft'></span>
-      </span>
-    </span>
-  </a>
-</li> -->
 
   </ul>
   </section>
